crates/rstest-bdd-macros/tests/ui/implicit_fixture_missing.rs
use rstest_bdd_macros::given;

#[given("a number {value}")]
fn step(other: u32) {}

fn main() {}
